History of changes of the RapidMiner versions
====================================================

Changes from RapidMiner 5.2.8 to 5.3.0
--------------------------------------
* Execute Program operator has File Object ports for stdin, stdout, stderr 
* Macros can be passed through the command line. Example: 'rapidminer //repository/home/test/process -Mkey1=value "-Mkey2=value with spaces"' will provide two macros named key1 and key2
* Added first wave of new and improved extensive documentation (often including tutorial processes) for many operators
* Added improved RapidAnalytics support. New run button: "Run process on RapidAnalytics".
  Can only be used if the process is stored on a RapidAnalytics repository.
  Instantly runs the process on the RapidAnalytics server the process is stored on.
* New operator: Performance to Data
* New operator: Throw Exception
* New file system operators: Copy File, Move File, Delete File, Rename File, Create Directory
* Aggregate: new aggregation functions: sum (fractional), count (fractional), count (percentage) and string concatenation
* Loop Attributes: new output port which collects the data from all iterations 
* Result Perspective: Added button in top right corner of a result tab to close all open results at once
* Repositories View: Added button which navigates to the repository location of the currently opened process
* Repositories View: Added popup menu item to open the selected entry in the OS file browser (only for Local Repositories)
* Added new view: 'Macros': This view shows macros and their values in real time during process execution
* Added resize button to text parameter editor dialog
* Preferences menu buttons reworked: 'OK' button saves settings permanently and closes the dialog; 
  'Apply' button saves settings permanently and does not close the dialog
* Generate Data: warn user if the selected number of attributes is not supported by the target function